# Skizze

./: .gitignore  README.md  Skizze.py  pyproject.toml  requirements.txt  test_run.sh
skizze/: __init__.py  cli.py  config.py  deep_lsd_utils.py  drawing.py  fclip_net.py  line_detection.py  preprocessing.py  scikit_tools.py  thresholding.py  utils.py
tests/: test_cli.py  test_utils.py
